arm64: dts: add base devicetree for t3 [1/1]
PD#SWPL-42992

Problem:
there is no dts file for t3.

Solution:
add base devicetree for t3.

Verify:
test pass on t3 pxp

Change-Id: If4777e14cebd342a4a91d86389c93af9ff157a5f
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -35,3 +35,4 @@ dtb-y += s4_s905y4_ap222_drm.dtb
 dtb-y += s4_s905y4_ap229_drm.dtb
 dtb-y += s4_s905y4_ap222_drm_1g.dtb
 dtb-y += s4_s905y4_ap201_1g.dtb
+dtb-y += t3_pxp.dtb
