--- a/drivers/pinctrl/meson/Makefile
+++ b/drivers/pinctrl/meson/Makefile
@@ -17,3 +17,4 @@ $(PINCTRL_MODULE_NAME)-$(CONFIG_PINCTRL_MESON_SC2) += pinctrl-meson-sc2.o
 $(PINCTRL_MODULE_NAME)-$(CONFIG_PINCTRL_MESON_T5D) += pinctrl-meson-t5d.o
 $(PINCTRL_MODULE_NAME)-$(CONFIG_PINCTRL_MESON_T7) += pinctrl-meson-t7.o
 $(PINCTRL_MODULE_NAME)-$(CONFIG_PINCTRL_MESON_S4) += pinctrl-meson-s4.o
+$(PINCTRL_MODULE_NAME)-$(CONFIG_PINCTRL_MESON_T3) += pinctrl-meson-t3.o
