--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -6,6 +6,7 @@
 #include <dt-bindings/interrupt-controller/irq.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/reset/amlogic,meson-t3-reset.h>
+#include <dt-bindings/clock/amlogic,t3-clkc.h>
 / {
 	cpus:cpus {
 		#address-cells = <2>;
@@ -160,6 +161,19 @@
 				compatible = "amlogic,meson-t7-reset";
 				reg = <0x0 0x2000 0x0 0x98>;
 				#reset-cells = <1>;
+			};
+
+			clkc: clock-controller {
+				compatible = "amlogic,t3-clkc";
+				#clock-cells = <1>;
+				reg = <0x0 0x0 0x0 0x49c>,
+				      <0x0 0x8000 0x0 0x2d0>,
+				      <0x0 0xe140 0x0 0xbc>;
+				reg-names = "basic", "pll",
+					    "cpu_clk";
+				clocks = <&xtal>;
+				clock-names = "xtal";
+				status = "okay";
 			};
 
 			uart_B: serial@7a000 {
