--- a/arch/arm64/configs/meson64_a64_P_defconfig
+++ b/arch/arm64/configs/meson64_a64_P_defconfig
@@ -520,6 +520,7 @@ CONFIG_COMMON_CLK_TM2=y
 CONFIG_COMMON_CLK_SC2=y
 CONFIG_COMMON_CLK_T7=y
 CONFIG_COMMON_CLK_S4=y
+CONFIG_COMMON_CLK_T3=y
 CONFIG_HWSPINLOCK=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_MESON_CLK_MEASURE=y
