clk-measure: add t3 clk measure support [1/1]
PD#SWPL-43040

Problem:
t3 clk measure bringup.

Solution:
add t3 clk measure support.

Verify:
test passed on t3 ptm

Change-Id: I7a7199ca6ed2c9f45ddcd338b03adbd8b10076cc
Signed-off-by: Bichao Zheng <bichao.zheng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -176,6 +176,11 @@
 				status = "okay";
 			};
 
+			meson_clk_msr@48000 {
+				compatible = "amlogic,meson-t3-clk-measure";
+				reg = <0x0 0x48000 0x0 0x1c>;
+			};
+
 			uart_B: serial@7a000 {
 				compatible = "amlogic,meson-uart";
 				reg = <0x0 0x7a000 0x0 0x18>;
