riscv: irqchip: plic: add a Nuclei PLIC driver [1/3]
PD#SWPL-94239

Add a driver for the Nuclei implementation of the RISC-V Platform Level
Interrupt Controller (PLIC).

This source code is based on drivers/irqchip/irq-sifive-plic.c

Signed-off-by: Huaqi Fang <578567190@qq.com>
Change-Id: I4ee0ea75c8ac180e47ec8af29e39f640d7d75096

--- a/drivers/irqchip/Kconfig
+++ b/drivers/irqchip/Kconfig
@@ -523,6 +523,19 @@ config SIFIVE_PLIC
 
 	   If you don't know what to do here, say Y.
 
+config NUCLEI_PLIC
+	bool "Nuclei Platform-Level Interrupt Controller"
+	depends on RISCV
+	select IRQ_DOMAIN_HIERARCHY
+	help
+	   This enables support for the PLIC chip found in Nuclei (and
+	   potentially other) RISC-V systems.  The PLIC controls devices
+	   interrupts and connects them to each core's local interrupt
+	   controller.  Aside from timer and software interrupts, all other
+	   interrupt sources are subordinate to the PLIC.
+
+	   If you don't know what to do here, say Y.
+
 config EXYNOS_IRQ_COMBINER
 	bool "Samsung Exynos IRQ combiner support" if COMPILE_TEST
 	depends on (ARCH_EXYNOS && ARM) || COMPILE_TEST
