--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -241,4 +241,15 @@
 		};
 
 	};
+
+	rng {
+		compatible = "amlogic,meson-rng";
+		status = "okay";
+		#address-cells = <2>;
+		#size-cells = <2>;
+		reg = <0x0 0xfe440788 0x0 0x0c>;
+		quality = /bits/ 16 <1000>;
+		version = <2>;
+	};
+
 };
