powerdomain: add powerdomain driver for t3 [1/3]
PD#SWPL-44156

Problem:
add powerdomain driver for t3

Solution:
add code

Verify:
Z1

Change-Id: I819bb9f9e1d32303a76e6aa7ce378c9ebc82f283
Signed-off-by: zhiqiang liang <zhiqiang.liang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -9,6 +9,7 @@
 #include <dt-bindings/clock/amlogic,t3-clkc.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/gpio/meson-t3-gpio.h>
+#include <dt-bindings/power/t3-pd.h>
 / {
 	cpus:cpus {
 		#address-cells = <2>;
@@ -151,6 +152,12 @@
 		clock-frequency = <24000000>;
 		clock-output-names = "xtal";
 		#clock-cells = <0>;
+	};
+
+	pwrdm: power-domains {
+		compatible = "amlogic,t3-power-domain";
+		#power-domain-cells = <1>;
+		status = "okay";
 	};
 
 	soc {
