--- a/arch/arm64/boot/dts/amlogic/t3_pxp.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_pxp.dts
@@ -203,3 +203,76 @@
 	status = "okay";
 };
 
+/* SDIO */
+//&sd_emmc_a {
+//	status = "disabled";
+//	pinctrl-0 = <&sdio_pins>;
+//	pinctrl-1 = <&sdio_clk_gate_pins>;
+//	pinctrl-names = "default", "clk-gate";
+//	#address-cells = <1>;
+//	#size-cells = <0>;
+//
+//	bus-width = <4>;
+//	cap-sd-highspeed;
+//	sd-uhs-sdr50;
+//	sd_uhs-sdr104;
+//	max-frequency = <200000000>;
+//
+//	non-removable;
+//	disable-wp;
+//
+//	//vmmc-supply = <&vddao_3v3>;
+//	//vqmmc-supply = <&vddio_ao1v8>;
+//
+//	brcmf: wifi@1 {
+//		reg = <1>;
+//		compatible = "brcm,bcm4329-fmac";
+//	};
+//};
+
+/* SD card */
+&sd_emmc_b {
+	status = "okay";
+	pinctrl-0 = <&sd_all_pins>;
+	pinctrl-1 = <&sd_1bit_pins>;
+	pinctrl-2 = <&sd_clk_gate_pins>;
+	pinctrl-names = "sd_default",
+			"sd_1bit_pins",
+			"clk-gate";
+	bus-width = <4>;
+	cap-sd-highspeed;
+//	sd-uhs-sdr12;
+//	sd-uhs-sdr25;
+//	sd-uhs-sdr50;
+//	sd_uhs-sdr104;
+	max-frequency = <200000000>;
+
+	non-removable;
+	disable-wp;
+
+	cd-gpios = <&gpio GPIOC_6 GPIO_ACTIVE_HIGH>;
+	//dat1-gpios = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
+	//vmmc-supply = <&vddao_3v3>;
+	//vqmmc-supply = <&emmc_1v8>;
+};
+
+&sd_emmc_c {
+	status = "okay";
+	pinctrl-0 = <&emmc_pins>, <&emmc_ds_pins>;
+	pinctrl-1 = <&emmc_clk_gate_pins>;
+	pinctrl-names = "default", "clk-gate";
+
+	bus-width = <8>;
+	cap-mmc-highspeed;
+	//mmc-ddr-1_8v;
+	//mmc-hs200-1_8v;
+	//mmc-hs400-1_8v;
+	max-frequency = <200000000>;
+	non-removable;
+	disable-wp;
+
+//	mmc-pwrseq = <&emmc_pwrseq>;
+//	vmmc-supply = <&vddao_3v3>;
+//	vqmmc-supply = <&vddao_1v8>;
+};
+
