frc: t3 frc bringup add frc drv support [1/1]
PD#SWPL-44472

Problem:
new feature

Solution:
1. add frc drv support
2. add input /output isr function
3. add input /output tasklet
4. add frc register define
5. add reg map and read write reg api
6. add initial function
7. add scene moudle file
8. add bbd module file
9. add iplogo module file
10.add film detect module
11.add sysfs debug cmd string parsing
12.add me module file
13.add mc module file
14.add bbd window file
15.add frc rdma register define
16.add frc clk init
17.move frc in/out process to tasklet
18.add frc workqueue to switch state
19.add buf calculate
20.basic function: frc mode switch
21.add reg rw/tooldebug node
22.add vframe check, duration check
23.add debug cmd mode, ratio, hvsize
24.add frc internal reg initial
25.read write reg ok

Verify:
T3

Signed-off-by: MingLiang Dong <mingliang.dong@amlogic.com>
Change-Id: I73d70420e73d1e2c7e05771f831481dfff7d18b7

--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -89,6 +89,20 @@
 			alignment = <0x0 0x0>;
 			linux,contiguous-region;
 		};
+
+		frc_cma_reserved:linux,frc_cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			/* frc:size need 4M alignment
+			 * 1080P 16 buffer:88Mhz (0x5800000)
+			 * 4k 16 buffer:336Mhz (0x15000000)
+			 */
+			size = <0x0 0x15000000>;
+			alignment = <0x0 0x400000>;
+			linux,contiguous-region;
+			/*alloc-ranges = <0x0 0x0 0x0 0x3f800000>;*/
+		};
+
 	};
 	codec_mm {
 		compatible = "amlogic, codec, mm";
@@ -522,6 +536,28 @@
 		};
 	};
 	/* Audio Related end */
+
+	aml_frc {
+		compatible = "amlogic, t3_frc";
+		dev_name = "aml_frc";
+		status = "okay";
+		frc_en = <1>;/*1:enabel ;0:disable*/
+		frc_hw_pos = <0>;/*0:before postblend; 1:after postblend*/
+		interrupts = <GIC_SPI 286 IRQ_TYPE_EDGE_RISING
+				GIC_SPI 287 IRQ_TYPE_EDGE_RISING
+				GIC_SPI 271 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "irq_frc_in", "irq_frc_out", "irq_frc_rdma";
+		memory-region = <&frc_cma_reserved>;
+		clocks = <&clkc CLKID_FRC>, <&clkc CLKID_ME>;
+		power-domains = <&pwrdm PDID_T3_FRCTOP>, <&pwrdm PDID_T3_FRCME>,
+				<&pwrdm PDID_T3_FRCMC>;
+		power-domain-names = "frc-top","frc-me","frc-mc";
+		clock-names = "clk_frc", "clk_me";
+		reg = <0x0 0xFF050000 0x0 0x30000 /*frc reg*/
+		       0x0 0xFE000000 0x0 0x300
+		       0x0 0xFF000000 0x0 0x10000>; /*frc clk reg*/
+		reg-names = "frc_reg","frc_clk_reg","vpu_reg";
+	};
 }; /* end of / */
 
 &ethmac {
