--- a/arch/arm/configs/meson64_a32_defconfig
+++ b/arch/arm/configs/meson64_a32_defconfig
@@ -635,6 +635,7 @@ CONFIG_AMLOGIC_VIDEO_TUNNEL=y
 CONFIG_AMLOGIC_MEDIA_ENHANCEMENT=y
 CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_DOLBYVISION=y
 CONFIG_AMLOGIC_MEDIA_ENHANCEMENT_VECM=y
+CONFIG_AMLOGIC_MEDIA_FRC=y
 CONFIG_AMLOGIC_MEDIA_FRAME_SYNC=y
 CONFIG_AMLOGIC_MEDIA_GDC=y
 CONFIG_AMLOGIC_MEDIA_VIN=y
