--- a/drivers/amlogic/media/Kconfig
+++ b/drivers/amlogic/media/Kconfig
@@ -77,6 +77,7 @@ source "drivers/amlogic/media/esm/Kconfig"
 source "drivers/amlogic/media/atv_demod/Kconfig"
 source "drivers/amlogic/media/avsync/Kconfig"
 source "drivers/amlogic/media/dtv_demod/Kconfig"
+source "drivers/amlogic/media/frc/Kconfig"
 endif
 endmenu
 
