--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
@@ -71,6 +71,21 @@
 			linux,contiguous-region;
 		};
 
+		/*di CMA pool */
+		di_cma_reserved:linux,di_cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			/* buffer_size = 3621952(yuv422 8bit)
+			 *  | 4736064(yuv422 10bit)
+			 *  | 4074560(yuv422 10bit full pack mode)
+			 * 10x3621952=34.6M(0x23) support 8bit
+			 * 10x4736064=45.2M(0x2e) support 12bit
+			 * 10x4074560=40M(0x28) support 10bit
+			 */
+			size = <0x0 0x0B000000>;
+			//size = <0x0 0x0>;
+			alignment = <0x0 0x400000>;
+		};
 		/* codec shared reserved */
 		codec_mm_reserved:linux,codec_mm_reserved {
 			compatible = "amlogic, codec-mm-reserved";
@@ -143,6 +158,34 @@
 		status = "okay";
 		amlvideo2_id = <1>;
 		cma_mode = <1>;
+	};
+
+	multi-di {
+		//status = "okay";
+		/***************************************************
+		 * memory: default is 4
+		 *	0:use reserved;
+		 *	1:use cma;
+		 *	2:use cma as reserved
+		 *  4:use codec mem
+		 ***************************************************/
+		flag_cma = <1>;//t5d unsupport 4K,di 1CH need 42M
+		//memory-region = <&di_cma_reserved>;
+		/***************************************************
+		 * clock-range: <min max>
+		 *	default: <334 334>
+		 ***************************************************/
+		//clock-range = <334 334>;
+		/***************************************************
+		 * en_4k: t5d not support 4k
+		 ***************************************************/
+		//en_4k = <0>;
+		//keep_dec_vf = <0>;
+		//po_fmt = <0>;
+		/***************************************************
+		 * post_nub: default is 7
+		 ***************************************************/
+		//post_nub = <7>;
 	};
 
 	unifykey {
