Watchodg: enable t3 watchdog [1/1]
PD#SWPL-44954

Problem:
T3 need to enable watchdog in kernel

Solution:
add watchdog dts node

Verify:
t3_ptm

Change-Id: Ief8a5f34afe5a8dda9d40712f9b817509aa528bd
Signed-off-by: Qianggui Song <qianggui.song@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -180,6 +180,15 @@
 				#reset-cells = <1>;
 			};
 
+			watchdog@2100 {
+				compatible = "amlogic,meson-sc2-wdt";
+				status = "okay";
+				/* 0:userspace, 1:kernel */
+				amlogic,feed_watchdog_mode = <1>;
+				reg = <0x0 0x2100 0x0 0x10>;
+				clocks = <&xtal>;
+			};
+
 			clkc: clock-controller {
 				compatible = "amlogic,t3-clkc";
 				#clock-cells = <1>;
