--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -393,6 +393,25 @@
 			};
 		};/* end of audiobus*/
 
+		vpu: vpu {
+			compatible = "amlogic, vpu-t3";
+			status = "okay";
+			reg =   <0x0 0xfe000000 0x0 0x100    /* clk */
+				0x0 0xfe00c000 0x0 0x70     /* pwrctrl */
+				0x0 0xff000000 0x0 0xa000>; /* vcbus */
+			clocks = <&clkc CLKID_VAPB>,
+				<&clkc CLKID_VPU_0>,
+				<&clkc CLKID_VPU_1>,
+				<&clkc CLKID_VPU>;
+			clock-names =   "vapb_clk",
+					"vpu_clk0",
+					"vpu_clk1",
+					"vpu_clk";
+			clk_level = <7>;
+			/* 0: 100.0M    1: 166.7M    2: 200.0M    3: 250.0M */
+			/* 4: 333.3M    5: 400.0M    6: 500.0M    7: 666.7M */
+		};
+
 		/* eARC */
 		audio_earc: bus@fe333000 {
 			compatible = "simple-bus";
