--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -163,6 +163,31 @@
 		status = "okay";
 	};
 
+	mhu_fifo: mhu@0 {
+		status = "okay";
+		compatible = "amlogic, meson_mhu_fifo";
+		reg = <0x0 0xfe006000 0x0 0x1000>,  /* mhu wr fifo */
+		      <0x0 0xfe007180 0x0 0x80>,   /* mhu set reg */
+		      <0x0 0xfe007200 0x0 0x80>,   /* mhu clr reg */
+		      <0x0 0xfe007280 0x0 0x80>,   /* mhu sts reg */
+		      <0x0 0xfe007040 0x0 0xc0>;   /* mhu irqctrl reg */
+		interrupts = <0 248 1>;   /* irq top */
+		mbox-irqmax = <64>;
+		mbox-irqctlr = <0>;
+		mbox-nums = <4>;
+		mbox-names = "dsp_dev",
+			     "ap_to_dspa",
+			     "ao_dev",
+			     "ap_to_ao";
+		mboxes = <&mhu_fifo 0>,
+			 <&mhu_fifo 1>,
+			 <&mhu_fifo 2>,
+			 <&mhu_fifo 3>;
+		mbox-id = <0x0 0x1 0x2 0x3>;
+		mbox-wr-rd = <1>;
+		#mbox-cells = <1>;
+	};
+
 	soc {
 		compatible = "simple-bus";
 		#address-cells = <2>;
