osd: t3: add osd support [1/1]
PD#SWPL-45637

Problem:
add osd support for new chip

Solution:
add this support

Verify:
T3 pxp

Change-Id: Id0167eeb6237051d3425e59d0d36289dc31b139b
Signed-off-by: Cao Jian <jian.cao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t3_pxp.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_pxp.dts
@@ -39,6 +39,14 @@
 			clear-map;
 		};
 
+		logo_reserved:linux,meson-fb {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x0 0x800000>;
+			alignment = <0x0 0x400000>;
+			alloc-ranges = <0x0 0x3f800000 0x0 0x800000>;
+		};
+
 		ion_cma_reserved:linux,ion-dev {
 			compatible = "shared-dma-pool";
 			reusable;
@@ -409,6 +417,15 @@
 	};
 	/* Audio Related end */
 }; /* end of / */
+
+&fb {
+	status = "okay";
+	display_size_default = <1920 1080 1920 2160 32>;
+	mem_size = <0x00800000 0x1980000 0x100000 0x100000>;
+	logo_addr = "0x3f800000";
+	mem_alloc = <0>;
+	pxp_mode = <1>; /** 0:normal mode 1:pxp mode */
+};
 
 &audiobus {
 	tdma:tdm@0 {
