--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -584,6 +584,21 @@
 		memory-region = <&ion_cma_reserved>;
 	};
 
+	fb: fb {
+		compatible = "amlogic, fb-t3";
+		memory-region = <&logo_reserved>;
+		status = "disabled";
+		interrupts = <GIC_SPI 197 IRQ_TYPE_EDGE_RISING
+			GIC_SPI 215 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "viu-vsync", "rdma";
+		/* uboot logo,fb0/fb1 memory size,if afbcd fb0=0x01851000*/
+		display_mode_default = "1080p60hz";
+		scale_mode = <1>;
+		/** 0:VPU free scale 1:OSD free scale 2:OSD super scale */
+		display_size_default = <1920 1080 1920 2160 32>;
+		/*1920*1080*4*3 = 0x17BB000*/
+	};
+
 	mesonstream {
 		compatible = "amlogic, codec, streambuf";
 		dev_name = "mesonstream";
