--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -652,6 +652,15 @@
 		dev_name = "aml-vcodec-dec";
 		status = "okay";
 	};
+
+	meson-amvideom {
+		compatible = "amlogic, amvideom-t3";
+		dev_name = "amvideom";
+		status = "okay";
+		interrupts = <GIC_SPI 197 IRQ_TYPE_EDGE_RISING
+			GIC_SPI 194 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "vsync", "vsync_viu2";
+	};
 };
 
 &periphs_pinctrl {
