--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -21,7 +21,7 @@
 			compatible = "arm,cortex-a55","arm,armv8";
 			reg = <0x0 0x0>;
 			enable-method = "psci";
-//			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
+			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
 //			#cooling-cells = <2>;
 //			clocks = <&clkc CLKID_CPU_CLK>,
 //				<&clkc CLKID_CPU_DYN_CLK>,
@@ -40,7 +40,7 @@
 			compatible = "arm,cortex-a55","arm,armv8";
 			reg = <0x0 0x1>;
 			enable-method = "psci";
-//			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
+			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
 //			#cooling-cells = <2>;
 //			clocks = <&clkc CLKID_CPU_CLK>,
 //				<&clkc CLKID_CPU_DYN_CLK>,
@@ -59,7 +59,7 @@
 			compatible = "arm,cortex-a55","arm,armv8";
 			reg = <0x0 0x2>;
 			enable-method = "psci";
-//			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
+			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
 //			#cooling-cells = <2>;
 //			clocks = <&clkc CLKID_CPU_CLK>,
 //				<&clkc CLKID_CPU_DYN_CLK>,
@@ -78,7 +78,7 @@
 			compatible = "arm,cortex-a55","arm,armv8";
 			reg = <0x0 0x3>;
 			enable-method = "psci";
-//			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
+			cpu-idle-states = <&CPU_SLEEP_0 &SYSTEM_SLEEP_0>;
 //			#cooling-cells = <2>;
 //			clocks = <&clkc CLKID_CPU_CLK>,
 //				<&clkc CLKID_CPU_DYN_CLK>,
