T3: dts enable postprocess [1/1]
PD#SWPL-47254

Problem:
dts enable postprocess

Solution:
dts enable postprocess

Verify:
T3

Change-Id: I4442c0fc69843c9b9f1272bbc0d4304500286626
Signed-off-by: jintao xu <jintao.xu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -476,6 +476,11 @@
 			compatible = "amlogic, aml_dummy_codec";
 			status = "okay";
 		};
+		video_composer {
+			compatible = "amlogic, video_composer";
+			dev_name = "video_composer";
+			status = "okay";
+		};
 		acodec:codec {
 			#sound-dai-cells = <0>;
 			compatible = "amlogic, tm2_revb_acodec";
