--- a/arch/arm64/boot/dts/amlogic/meson-tm2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-tm2.dtsi
@@ -608,6 +608,14 @@
 		status = "okay";
 	};
 
+	adc: adc {
+		compatible = "amlogic, adc-tm2";
+		status = "okay";
+		reg = <0x0 0xff654000 0x0 0x2000/* afe reg base */
+			0x0 0xff63c000 0x0 0x2000/* hiu base */
+			>;
+	};
+
 	mailbox: mhu@ff63c400 {
 		status = "okay";
 		compatible = "amlogic, meson_mhu";
