--- a/arch/arm64/boot/dts/amlogic/tm2_t962e2_ab311.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_t962e2_ab311.dts
@@ -148,6 +148,23 @@
 			size = <0x0 0x1400000>;
 			alignment = <0x0 0x400000>;
 		};
+
+		/*demod_reserved:linux,demod {
+		 *	compatible = "amlogic, demod-mem";
+		 *	size = <0x0 0x800000>; //8M //100m 0x6400000
+		 *	alloc-ranges = <0x0 0x0 0x0 0x30000000>;
+		 *	//multi-use;
+		 *	//no-map;
+		 *};
+		 */
+
+		demod_cma_reserved:linux,demod_cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			/* 8M */
+			size = <0x0 0x0800000>;
+			alignment = <0x0 0x400000>;
+		};
 	};
 
 	codec_mm {
@@ -230,6 +247,98 @@
 			0x0 0x0 0x0 0x0
 			0x0 0x0 0x0 0x0
 			0x0 0xff610000 0x0 0xa000>;
+	};
+
+	aml_dtv_demod {
+		compatible = "amlogic, ddemod-tm2";
+		dev_name = "aml_dtv_demod";
+		status = "disabled";
+
+		//pinctrl-names="dtvdemod_agc";
+		//pinctrl-0=<&dtvdemod_agc>;
+
+		clocks = <&clkc CLKID_DAC_CLK>;
+		clock-names = "vdac_clk_gate";
+
+		reg = <0x0 0xff650000 0x0 0x4000	/*dtv demod base*/
+			   0x0 0xff63c000 0x0 0x2000	/*hiu reg base*/
+			   0x0 0xff800000 0x0 0x1000	/*io_aobus_base*/
+			   0x0 0xffd01000 0x0 0x1000	/*reset*/
+			>;
+
+		dtv_demod0_mem = <0>;	// need move to aml_dtv_demod ?
+		spectrum = <1>;
+		cma_flag = <1>;
+		cma_mem_size = <8>;
+		memory-region = <&demod_cma_reserved>;//<&demod_reserved>;
+
+		power-domains = <&pwrc PWRC_TM2_DEMOD_ID>;
+	};
+
+	atv-demod {
+		compatible = "amlogic, atv-demod";
+		status = "disabled";
+		btsc_sap_mode = <1>;
+		interrupts = <0 236 1>;
+		/* pinctrl-names="atvdemod_agc_pins"; */
+		/* pinctrl-0=<&atvdemod_agc_pins>; */
+		reg = <0x0 0xff656000 0x0 0x2000 /* demod reg */
+				0x0 0xff63c000 0x0 0x2000 /* hiu reg */
+				0x0 0xff634000 0x0 0x2000 /* periphs reg */
+				0x0 0xff64a000 0x0 0x2000>; /* audio reg */
+		reg_23cf = <0x88188832>;
+		/*default:0x88188832;r840 on haier:0x48188832*/
+		power-domains = <&pwrc PWRC_TM2_ATVDEMOD_ID>;
+	};
+
+	dvb-extern {
+		compatible = "amlogic, dvb-extern";
+		dev_name = "dvb-extern";
+		status = "disabled";
+
+		fe_num = <1>;
+		fe0_demod = "internal";
+
+		tuner_num = <1>; /* tuner number, multi tuner support */
+		tuner0_name = "si2151_tuner";
+		tuner0_i2c_adap = <&i2c0>;
+		tuner0_i2c_addr = <0x60>;
+		/* tuner0_xtal = <0>; */ /* unuse for si2151 */
+		/* tuner0_xtal_mode = <0>; */
+		/* tuner0_xtal_cap = <0>; */
+	};
+
+	dvb-demux {
+		compatible = "amlogic, dvb-demux";
+		dev_name = "dvb-demux";
+		status = "disabled";
+
+		dmx = <&demux>;
+		key_endia = <1>;
+		add_s2p2 = <1>;
+		add_ts_in = <1>;
+		add_asyncfifo = <1>;
+
+		/*"parallel","serial","disable"*/
+		ts2 = "parallel";
+		ts2_control = <0>;
+		ts2_invert = <0>;
+
+		clocks = <&clkc CLKID_DEMUX
+		&clkc CLKID_AHB_ARB0
+		&clkc CLKID_U_PARSER>;
+		clock-names = "demux", "ahbarb0", "parser_top";
+		pinctrl-names = "p_ts2";
+		pinctrl-0 = <&dvb_p_ts2_pins>;
+	};
+
+	tvafe_avin_detect {
+		compatible = "amlogic, tm2_tvafe_avin_detect";
+		status = "disabled";
+		device_mask = <1>;/*bit0:ch1;bit1:ch2*/
+		reg = <0x0 0xffd0f090 0x0 0x20>;/*cbus register*/
+		interrupts = <0 12 1>,
+			<0 13 1>;
 	};
 
 	auge_sound {
@@ -664,6 +773,39 @@
 		status = "okay";
 	};
 
+	tvafe {
+		compatible = "amlogic, tvafe-tm2_b";
+		/*memory-region = <&tvafe_cma_reserved>;*/
+		status = "disabled";
+		flag_cma = <1>;/*1:share with codec_mm;0:cma alone*/
+		cma_size = <5>;/*MByte*/
+		reg = <0x0 0xff654000 0x0 0x2000 /*tvafe reg base*/
+				0x0 0xff63c000 0x0 0x2000>; /*hiu reg base*/
+		reserve-iomap = "true";
+		tvafe_id = <0>;
+		//pinctrl-names = "default";
+		/*!!particular sequence, no more and no less!!!*/
+		tvafe_pin_mux = <
+				3 /* TVAFE_CVBS_IN2, CVBS_IN0 = 0 */
+				1 /* TVAFE_CVBS_IN0, CVBS_IN1 */
+				2 /* TVAFE_CVBS_IN1, CVBS_IN2 */
+				4 /* TVAFE_CVBS_IN3, CVBS_IN3 */
+		>;
+		clocks = <&clkc CLKID_DAC_CLK>;
+		clock-names = "vdac_clk_gate";
+
+		cutwindow_val_h = <0 0 0 0 8>; /* level 0~4 */
+		cutwindow_val_v = <4 8 14 16 24>;  /* level 0~4 */
+
+		power-domains = <&pwrc PWRC_TM2_TVFE_ID>;
+	};
+
+	vbi {
+		compatible = "amlogic, vbi";
+		status = "disabled";
+		interrupts = <0 83 1>;
+	};
+
 	cvbsout {
 		compatible = "amlogic, cvbsout-tm2";
 		status = "okay";
@@ -767,6 +909,13 @@
 	status = "okay";
 	phy-handle = <&internal_ephy>;
 	phy-mode = "rmii";
+};
+
+&i2c0 {
+	status = "disabled";
+	clock-frequency = <300000>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c0_dv_pins>;
 };
 
 &ir {
