dts: arm64: add support for more board [1/1]
PD#SWPL-46973

Problem:
add support for more board

Solution:
add support for more board

Verify:
none

Change-Id: Icc9441efbb1ff3d397cfd67917e6f2bacb505125
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -36,3 +36,9 @@ dtb-y += s4_s905y4_ap229_drm.dtb
 dtb-y += s4_s905y4_ap222_drm_1g.dtb
 dtb-y += s4_s905y4_ap201_1g.dtb
 dtb-y += t3_pxp.dtb
+dtb-y += t3_t982_ar311.dtb
+dtb-y += t3_t982_ar319.dtb
+dtb-y += t3_t965d4_ar331.dtb
+dtb-y += t3_t982_ar301.dtb
+dtb-y += t3_t982_ar309.dtb
+dtb-y += t3_t965d4_ar321.dtb
