--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -918,6 +918,36 @@
 		};
 	};
 
+	hdmirx_a_mux:hdmirx_a_mux {
+		mux {
+			groups = "hdmirx_hpd_a",
+				"hdmirx_5vdet_a",
+				"hdmirx_sda_a",
+				"hdmirx_scl_a";
+			function = "hdmirx";
+		};
+	};
+
+	hdmirx_b_mux:hdmirx_b_mux {
+		mux {
+			groups = "hdmirx_hpd_b",
+				"hdmirx_5vdet_b",
+				"hdmirx_sda_b",
+				"hdmirx_scl_b";
+			function = "hdmirx";
+		};
+	};
+
+	hdmirx_c_mux:hdmirx_c_mux {
+		mux {
+			groups = "hdmirx_hpd_c",
+				"hdmirx_5vdet_c",
+				"hdmirx_sda_c",
+				"hdmirx_scl_c";
+			function = "hdmirx";
+		};
+	};
+
 	pwm_a_pins2: pwm_a_pins2 {
 		mux {
 			groups = "pwm_a_c";
