--- a/drivers/amlogic/media/vin/tvin/hdmirx/Makefile
+++ b/drivers/amlogic/media/vin/tvin/hdmirx/Makefile
@@ -14,6 +14,7 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_r
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_tm2.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t5.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t7.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += vin/tvin/hdmirx/hdmi_rx_hw_t3.o
 
 #obj-$(CONFIG_AMLOGIC_MEDIA_TVIN_HDMI) += tvin_hdmirx.o
 #tvin_hdmirx-objs := hdmi_rx_wrapper.o hdmi_rx_hw.o hdmi_rx_drv.o \
